--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </svg>
         got to cvs sheet
     </button>
-        <button type="button" class="btn btn-warning mb-3" id="pdfBtn">
+        <button type="button" class="btn btn-primary mb-3" id="pdfBtn">
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-pdf"
     viewBox="0 0 16 16">
     <path
